# swagger.json
@@ -11,13 +11,6 @@
     "http"
   ],
   "paths": {
-    "/docs": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
     "/": {
       "get": {
         "description": "",
